--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/preset-stage-2": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "webpack": "^3.12.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.8.2"
