--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": "> 1%, last 2 versions",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "@babel/preset-stage-2": "^7.0.0",
+    "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
     "webpack": "^3.12.0",
     "webpack-cli": "^3.3.11",
