--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@babel/preset-stage-2": "^7.0.0",
     "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "url-loader": "^2.2.0",
     "webpack": "^3.12.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.8.2"
